# Angewandte-Programmierung

./: README.md  api_tests.py  frontend.py  main.py  pyproject.toml  test_day4.py  test_main.py  test_validation.py  work-log-template.md  work-log.md
Alte Main Files/: main_day4.py  main_mit_DB.py
Exploration/: ALT_main.py  Wetter_anzeigen.py  main_bis_day5.py  main_sim.py  test_connection.py
data/: notes.db  notes.json
testfiles/: test_notes.py
